add transaction from air
