# src/main/java/com/example/bankcards/controller/CardController.java
@@ -3,7 +3,6 @@ package com.example.bankcards.controller;
 import com.example.bankcards.dto.CardDTO;
 import com.example.bankcards.dto.CardFilterDTO;
 import com.example.bankcards.dto.CreateCardDTO;
-import com.example.bankcards.dto.DepositDTO;
 import com.example.bankcards.dto.PageResponseDTO;
 import com.example.bankcards.dto.UpdateCardDTO;
 import com.example.bankcards.entity.CardStatus;
@@ -24,12 +23,6 @@ import org.springframework.web.bind.annotation.*;
 public class CardController {
 
     private final CardService cardService;
-
-    @PostMapping("/me/{cardId}/deposit")
-    @Operation(summary = "User: deposit money to card from air")
-    public ResponseEntity<CardDTO> deposit(@PathVariable Long cardId, @Valid @RequestBody DepositDTO dto) {
-        return ResponseEntity.ok(cardService.deposit(cardId, dto));
-    }
 
     @PostMapping("/admin")
     @Operation(summary = "Admin: create card for user")
